# egui_tabular

./: .gitignore  Cargo.toml  README.md
demos/csv_xls_import/: Cargo.toml
demos/csv_xls_import/src/: main.rs
demos/simple/: Cargo.toml
demos/simple/src/: main.rs
src/: backend.rs  cell.rs  column.rs  filter.rs  frontend.rs  lib.rs  sort.rs  table_view.rs  util.rs
src/backends/: csv.rs  csv_ui.rs  mod.rs  variant.rs
src/importers/: csv.rs  csv_xls_importer.rs  mod.rs  required_column.rs  tabular_importer.rs
src/table_view/: cell_edit.rs  cell_view.rs  config.rs  interaction.rs  interface.rs  layout.rs  sizing.rs  state.rs  table.rs  tool_column.rs  util.rs  widgets.rs
tabular_core/: Cargo.toml
tabular_core/src/: backend.rs  lib.rs
