[package]
name = "egui_tabular"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "demos/simple"
]

[dependencies]
egui = { version = "0.29" }
egui_extras = { version = "0.29", features = ["serde"] }
egui_dnd = { version = "0.10" }
egui-modal = { version = "0.5" }
egui-phosphor = { version = "0.7", features = ["fill"] }
itertools = "0.13"
rfd = "0.15"
log = "0"
serde = { version = "1", features = ["derive"] }
csv = "1.3"
strum = { version = "0.26", features = ["derive"] }
rvariant = { path = "../rvariant" }
tap = "1.0"