[package]
name = "egui_tabular"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "demos/simple",
    "demos/csv_xls_import",
]

[dependencies]
egui = { version = "0.30" }
egui_extras = { version = "0.30", features = ["serde"] }
#egui-modal = { version = "0.6" }
#egui-phosphor = { version = "0.7", features = ["fill"] }
#itertools = "0.13"
rfd = "0.15"
log = "0"
serde = { version = "1", features = ["derive"] }
csv = "1.3"
strum = { version = "0.26", features = ["derive"] }
rvariant = { path = "../rvariant" }
tap = "1.0"