[package]
name = "egui_tabular"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "tabular_core",
    "demos/simple",
    "demos/csv_xls_import",
]

[workspace.dependencies]
rvariant = { path = "../rvariant", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }

[dependencies]
egui = { version = "0.31" }
egui_extras = { version = "0.31", features = ["serde"] }
#egui-modal = { version = "0.6" }
#egui-phosphor = { version = "0.7", features = ["fill"] }
itertools = "0.14"
rfd = "0.15"
log = "0"
serde = { version = "1", features = ["derive"] }
csv = "1.3"
strum = { workspace = true }
tap = "1.0"
tabular_core = { path = "./tabular_core" }
chardetng = "0.1"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
rvariant = { workspace = true }
indexmap = "2"