[package]
name = "simple"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29"
egui_extras = { version = "0.29", default-features = false, features = [
    "serde",
] }
eframe = { version = "0.29", features = ["serde", "persistence"] }
egui_tabular = { path = "../.." }

names = { version = "0.14", default-features = false }
fastrand = "2"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
